# TradeStrategy

./: LICENSE  LICENSE.txt  README.md  example.py  gitignore  pyproject.toml
return_allocations/: allocations.py
src/trade_strategy/: __about__.py  __init__.py
src/trade_strategy/portfolio_construction/: efficient_frontier.py
src/trade_strategy/portfolio_construction/return_allocations/: allocations.py
tests/: __init__.py  test_efficient_frontier.py
