[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trade-strategy"
version = "0.1.0"
description = 'A Python package for analyzing investment portfolios, including using quantitative methods like the efficient frontier for calculations an optimal asset allocation strategy.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "zerubabeldinsa", email = "zerubabel.dinsa@outlook.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pandas",
  "numpy",
  "yfinance",
]

[project.urls]
Documentation = "https://github.com/zerubabeldinsa/trade-strategy#readme"
Issues = "https://github.com/zerubabeldinsa/trade-strategy/issues"
Source = "https://github.com/zerubabeldinsa/trade-strategy"

[tool.hatch.version]
path = "src/trade_strategy/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/trade_strategy tests}"

[tool.coverage.run]
source_pkgs = ["trade_strategy", "tests"]
branch = true
parallel = true
omit = [
  "src/trade_strategy/__about__.py",
]

[tool.coverage.paths]
trade_strategy = ["src/trade_strategy", "*/trade-strategy/src/trade_strategy"]
tests = ["tests", "*/trade-strategy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
